# aether-viz-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
aetherviz_service/: config.py  llm_service.py  main.py
doc/: geometric-recomposition-stability-plan.md  langsmith_trace_analysis_39616caf_b25709a9.md  langsmith_trace_analysis_ef20206d.md  workflow-and-code-quality-review.md
evals/: README.md  __init__.py  run_constraint_geometry_ir_eval.py  run_edit_html_eval.py  run_eval.py  run_generate_baseline_eval.py  run_ir_routing_eval.py  run_ir_stability_eval.py  run_number_line_ir_eval.py  run_scene_temperature_ab.py
markdown_to_html_ppt/: config.py  llm_service.py  main.py
plan/: deepagents-refactor-plan.md
scripts/: build_visual_dataset.py  langsmith_visual_evaluators.py  visual_regression.py
tests/: test_aetherviz.py  test_config.py  test_constraint_geometry_ir.py  test_content_patch.py  test_css_patch.py  test_data_distribution_ir.py  test_discrete_structure_ir.py  test_dom_api_contract.py  test_edit_deterministic_patch.py  test_edit_diagnosis.py  test_edit_diff_report.py  test_edit_intent.py  test_edit_scoped_patch.py  test_edit_spec.py  test_edit_strategy.py  test_edit_targeting.py  test_generate_prompts.py  test_generation_trace.py  test_hardening.py  test_html_agent.py  test_html_output.py  test_ir_backends.py  test_ir_routing.py  test_ir_stream.py  test_langsmith.py  test_llm_service.py  test_model_factory.py  test_number_line_ir.py  (+9 more)
(+363 files in other folders)
