[project]
name = "aether-viz-service"
version = "0.1.0"
description = "AI互动实验：a FastAPI service for generating interactive teaching HTML."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "beautifulsoup4>=4.13.4,<5.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "langchain-openai>=0.3.0,<1.0.0",
  "langsmith>=0.3.0,<1.0.0",
  "openai>=1.78.1,<2.0.0",
  "pydantic-settings>=2.9.1,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "uvicorn[standard]>=0.34.2,<0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "pytest>=8.3.5,<9.0.0",
  "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aetherviz_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"aetherviz_service/main.py" = ["E402"]
"tests/test_html_agent.py" = ["E402"]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
